# bpmeth

./: .gitignore  README.md  example_track.py  example_track4d.py  pyproject.toml  track2d.py  track4d.py  track4d_fringe.py  track4d_sextupole.py
NumericalIntegration/: example.py  solver.py
examples/: analytical_curved_dipole.py  analytical_curved_drift.py  analytical_solenoid.py  analytical_straight_dipole.py  analyze_hitriplus.py  combinedfunction.py  curved_dipole.py  curved_drift.py  dipole_comparison.py  ex_frames.py  exact_fringefield.py  example_RBend.py  example_dipole.py  example_frames.py  example_quad.py  example_slice.py  expanded_Hamiltonian.py  expansion.py  expansion_frametransformations.py  expansion_table.ipynb  fieldmap_RBend.py  fieldmapfit.py  fieldmapfitedges.py  fringefields.py  fringes_numerical_integration.ipynb  integrate_wedge.py  numerical_integration.py  quadrupole_edge_models.py  quadrupole_fringe.py  quadrupole_fringe_maps.py  quadrupole_with_edge_angle.py  solenoid.py  solenoid_comparison.py  straight_dipole.py  symplecticity_forest.py  track4d_fringe.py  track4d_sextupole.py  track_combinedfunction.py  track_sdep_quadrupole.py  track_smooth_quadrupole.py  (+3 more)
examples/ELENA/: fast_hamilton_fieldmap.ipynb  fast_hamilton_fieldmap.py
examples/RDTs/: track4d_momentum_RDTs.py
examples/fast_hamilton/: example_fieldmap.ipynb
expansion/: example.py  generate_expansion.py
fieldmaps/hitriplus_cct/: analyze_components.py  (+3 more)
tests/: test_backtracking.py  test_exact_solution.py  test_fast_hamilton_rk4.py  test_hamiltonian.py  test_twiss.py
(+116 files in other folders)
