[project]
name = "bpmeth"
description = "A great package."
readme = "README.md"
authors = [
  { name = "Silke Van der Schueren", email = "silkevdschueren@gmail.com" },
  { name = "Riccardo De Maria", email = "riccardodemaria@gmail.com" },

]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


dependencies = [
  "numpy", "matplotlib", "scipy", "sympy"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/silkevdschueren/bpmeth"

